app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
/* @import "tailwindcss"; */

body {
  font-family: 'Nunito', sans-serif;
}
.transparentBG {
  background-color: #373737;
}
.nav-logo {
  max-width: 150px;
  margin-left: 20px;
}

.btn-large {
  background-color: #1c5b82;
}
.btn-small {
  background-color: #1c5b82;
}
.search-bar {
  width: 100%;
  border-radius: 15px;
  border: 1px #000 solid;
  padding: 5px 5px 5px 25px;
  display: inline-block;
  color: var(--color-text);
}

.landing-logo {
  margin-top: 100px;
}
.page-container {
  margin-top: 50px;
  border-radius: 25px;
  padding: 50px;
  margin-bottom: 50px;
}
.page-text {
  font-size: 30px;
  padding: 20px;
}
.page-name {
  font-size: 60px;
  margin-bottom: 40px;
}
select {
  display: inline-block;
  height: 60px;
  font-size: 30px;
  text-align: center;
}
.nav-icon {
  margin-right: 10px;
}
.form-link {
  font-size: 20px;
}

